--- a/introducao.html
+++ b/introducao.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Tux_Enhanced.svg.png" type="image/x-icon">
-    <title>Linux - Home</title>
+    <title>Linux - Introdução</title>
 </head>
 <body>
     <header>
@@ -20,15 +20,10 @@
         </div>
     </header>
     <main>
-        <section class="home">
-            <div class="left">
-                <h1>Linux: Uma Janela para a Liberdade Digital</h1>
-                <p>É um termo popularmente empregado para se referir a sistemas operativos ou sistemas operacionais que utilizam o núcleo Linux. O núcleo foi desenvolvido pelo programador finlandês Linus Torvalds, inspirado no sistema Minix</p>
-                <button>Veja um pouco sobre o Linux</button>
-            </div>
-            <div class="right">
-                <img src="Tux_Enhanced.svg.png" alt="linux">
-            </div>
+        <section class="introducao">
+            <h1>Introdução</h1>
+            <p>O Linux é um sistema operacional de código aberto que tem revolucionado o mundo da tecnologia desde sua criação. Desenvolvido inicialmente por Linus Torvalds em 1991, o Linux tem conquistado cada vez mais adeptos ao redor do mundo devido às suas características únicas, como estabilidade, segurança e liberdade. Neste artigo, exploraremos os principais tópicos relacionados ao Linux, desde sua filosofia até suas aplicações e vantagens no mundo atual.</p>
+            <button>Veja a introdução do Linux</button>
         </section>
     </main>
 </body>
