--- a/vantagens.html
+++ b/vantagens.html
@@ -25,7 +25,7 @@
             <p>Estabilidade e Segurança: O Linux é conhecido por sua estabilidade e segurança robustas. Devido à sua arquitetura sólida e ao modelo de desenvolvimento aberto, o Linux é menos suscetível a falhas de segurança e crashes do sistema. Além disso, as atualizações e correções são liberadas rapidamente pela comunidade de desenvolvedores.<br><br>
             Personalização e Flexibilidade: O Linux oferece uma ampla gama de opções de personalização e flexibilidade. Os usuários podem escolher entre diferentes interfaces gráficas, ambientes de desktop e aplicativos, adaptando o sistema às suas preferências. Isso permite que o Linux seja utilizado em uma variedade de dispositivos, desde servidores de alto desempenho até dispositivos embarcados.<br><br>
             Software Livre e Código Aberto: Uma das principais vantagens do Linux é sua natureza de software livre e código aberto. Isso significa que os usuários têm acesso total ao código-fonte, podendo estudá-lo, modificar e distribuir livremente. Além disso, a comunidade de desenvolvedores de Linux é vasta e colaborativa, resultando em uma ampla gama de software e suporte disponíveis gratuitamente.</p>
-            <button>Veja a introdução do Linux</button>
+            <button>Veja as vantagens do Linux</button>
         </section>
     </main>
 </body>
